syntax = "proto2";

package apollo.control;

import "modules/control/proto/calibration_table.proto";
import "modules/control/proto/pid_conf.proto";

// controller param
message NewControllerConf {
  optional double ts = 1;  // longitudinal controller sampling time
  optional double brake_minimum_action = 2;
  optional double throttle_minimum_action = 3;
  optional double speed_controller_input_limit = 4;
  optional double station_error_limit = 5;
  optional double preview_window = 6;
  optional double standstill_acceleration = 7;

  optional PidConf station_pid_conf = 8;
  optional PidConf low_speed_pid_conf = 9;
  optional PidConf high_speed_pid_conf = 10;
  optional double switch_speed = 11;  // low/high speed controller switch speed

  optional calibrationtable.ControlCalibrationTable calibration_table = 12;
}
